repaso 2 terminado, ejercicios dom comenzados

--- a/EJERCICIOS REPASO 2/ej2.html
+++ b/EJERCICIOS REPASO 2/ej2.html
@@ -14,10 +14,10 @@
 
     <script>
 
-        function infoVendedores(){
+       
 
-            let importes=[];
-            let vendedores=[];
+            var importes=[];
+            var vendedores=[];
 
             var numVendedores=parseInt(prompt("La informacion de cuantos endedores quieres introducir?"));
             for(let i=0;i<numVendedores;i++){
@@ -34,7 +34,7 @@
 
             impotMax(importes,vendedores);
 
-        }
+        
 
         function impotMax(importes, vendedores){
             let maxImport=0;
