ejercicios dom terminados

--- a/EJERCICIOS DOM/ej4.html
+++ b/EJERCICIOS DOM/ej4.html
@@ -22,6 +22,8 @@
             
 
             function acceder(){
+               borrar();
+
                let cuadro=document.getElementById("cuadro");
                let textos=document.querySelectorAll("body > p");
                 for (let i = 0; i < textos.length; i++) {
