Ejercicios BOM terminados

--- a/EJERCICIOS BOM /ej4.html
+++ b/EJERCICIOS BOM /ej4.html
@@ -30,7 +30,7 @@ function abrirNuevaVentana() {
             let boton=document.createElement("button");
             boton.value=nombre;
             boton.textContent=nombre;
-            boton.onclick=funcion;
+            boton.onmouseover=funcion;
             nuevaVentana.document.body.appendChild(boton);
         }
         function escapa(){
