--- a/EJERCICIOS EVENTOS 2/ej5.html
+++ b/EJERCICIOS EVENTOS 2/ej5.html
@@ -7,20 +7,45 @@
     window.onload=inicio;
     function inicio(){
         let textArea=document.getElementById("descripcion");
-        textArea.setAttribute("maxlength",140);
+        textArea.setAttribute("maxlength",10);
         textArea.addEventListener("keydown", analizarContenido);
-    }
-    function analizarContenido(evento){
         let contador=document.getElementById("letras");
-        let dispo=(evento.target.getAttribute('maxlength')-evento.target.value.length)-1;
-        
-        contador.innerHTML=dispo+"/140 caracteres";
+
+        contador.innerHTML=textArea.getAttribute('maxlength')+"/"+textArea.getAttribute('maxlength') +" caracteres"
     }
+    var cont=0;
+    function analizarContenido(evento){
+        cont++;
+        console.log(cont);
+        let contador=document.getElementById("letras");
+        // console.log(parseInt(evento.target.getAttribute('maxlength')));
+
+        let dispo=(parseInt(evento.target.getAttribute('maxlength'))-1)-(evento.target.value.length);
+        // console.log(dispo);
+            contador.innerHTML=dispo+"/"+evento.target.getAttribute('maxlength') +" caracteres";
+
+        
+        // tipoCaracter(evento);
+    }
+
+    function tipoCaracter(evento){
+        let tecla=evento.keyCode;
+    if(tecla!="a"){
+            evento.target.style.color="blue";
+        }
+        else{
+            evento.target.style.color="blue";
+
+        }
+    }
+    function esMayus(evento) {
+            return (evento >= 65 && evento <= 90);
+        }
 
 </script>
 <body>
 <div align="center">
-<textarea id="descripcion" cols="40" rows="3" name="descripcion"> </textarea></br>
+<textarea id="descripcion" cols="40" rows="3" name="descripcion"></textarea></br>
 <span id="letras">140/140 caracteres</span>
 </div>
 </body>
