--- a/EJERCICIOS EVENTOS 2/ej4.html
+++ b/EJERCICIOS EVENTOS 2/ej4.html
@@ -33,6 +33,7 @@ span	{background-color:purple;border:2px solid red;}
             if(borde!="rgb(255,0,0)"){
                 this.style.backgroundColor="yellow";
             }
+            event.stopPropagation();
         
     }
 </script>
