--- a/EJERCICIOS FORMULARIOS/ej3.2.html
+++ b/EJERCICIOS FORMULARIOS/ej3.2.html
@@ -14,7 +14,7 @@
         window.onload=inicio;
         function inicio(){
             var formulario = document.getElementById("formulario");
-            formulario.elements["problema"].addEventListener("keypress", textMax);            ;
+            formulario.elements["problema"].addEventListener("keypress", textMax);         
             
             formulario.addEventListener("submit", validar);
         }
