--- a/EJERCICIOS FORMULARIOS/ej4 blur.html
+++ b/EJERCICIOS FORMULARIOS/ej4 blur.html
@@ -19,7 +19,7 @@
         inputs[0].focus();
         for (let i = 0; i < inputs.length; i++) {
             inputs[i].addEventListener("keypress",siguiente);
-            inputs[i].addEventListener("focus",validar);
+            inputs[i].addEventListener("blur",validar);
             
         }
 
